--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,19 @@
     <title>React App</title>
   </head>
   <body>
+    <style>
+      input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
+input[type=number] { 
+  -moz-appearance: textfield; 
+  appearance: none; 
+}
+
+    </style>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
