--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>INS - Interlay Naming Service</title>
+    <title>KNS - Kintsugi Naming Service</title>
   </head>
   <body>
     <style>
