--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>KNS - Kintsugi Naming Service</title>
+    <style>
+      body {
+    --tw-bg-opacity: 1;
+    background-color: rgb(31 41 55 / var(--tw-bg-opacity));;
+      }
+    </style>
   </head>
   <body>
     <style>
